# agentmail-toolkit

./: 00_STATE.md  01_REPO_MAP.md  05_PR_CANDIDATES.md  06_SELECTED_5_PR_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  smithery.yaml
.github/workflows/: benchmark.yml  ci.yml
mcp/: README.md
mcp/src/agentmail_mcp/tools/: email.py
node/: README.md  bench.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsup.config.ts
node/examples/: agent.ts  ai-sdk.ts  langchain.ts  package.json  pnpm-lock.yaml  soulink-identity.ts
node/src/: ai-sdk.ts  clawdbot.ts  functions.ts  index.ts  langchain.ts  mcp.ts  output-schemas.ts  schemas.ts  toolkit.ts  tools.ts  util.ts  wrapper.ts
node/tests/: adapters.test.ts  contract.test.ts  fixtures.ts  mcp.test.ts  package.test.ts  security.test.ts
python/: README.md  pyproject.toml
python/examples/: agent.py
python/src/agentmail_toolkit/: __init__.py  functions.py  langchain.py  livekit.py  openai.py  schemas.py  toolkit.py  tools.py  util.py  wrapper.py
python/tests/: conftest.py  main.py  test_adapters.py  test_functions.py  test_livekit_status_update.py  test_schemas_optional_defaults.py  test_security.py
