[project]
name = "agentmail-toolkit"
version = "0.2.2"
description = "AgentMail Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agentmail>=0.2.5",
    "filetype>=1.2.0",
    "langchain>=1.1.0",
    "livekit-agents>=1.3.5",
    "openai-agents>=0.6.1",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[tool.hatch.envs.default]
dependencies = ["build", "twine"]

[tool.hatch.envs.default.scripts]
clean = "rm -rf dist/ build/ *.egg-info src/*.egg-info"
build = ["clean", "python -m build"]
publish = "twine upload dist/*"

[tool.uv.workspace]
members = ["examples"]
